2010-06-01  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/PackagingProject.xpt.xml: Don't include the
	  assembly name in the project type name since it doesn't work
	  well when running on .NET

2010-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.Commands/Commands.cs:
	* MonoDevelop.Deployment.Gui/DeployOperations.cs: Fix
	  incorrect use of ShowCustomDialog/RunCustomDialog.

2010-05-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Deployment.Commands/Commands.cs:
	* MonoDevelop.Deployment.Gui/DeployOperations.cs: More dialog
	  placing.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.Targets/CommandPackageBuilder.cs:
	  Track api changes.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Deployment.addin.xml: Bumped MD version.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Deployment.csproj:
	* MonoDevelop.Deployment.addin.xml:
	* MonoDevelop.Deployment/PackageBuilder.cs:
	* MonoDevelop.Deployment.Gui/DeployDialog.cs:
	* MonoDevelop.Deployment.Commands/Commands.cs:
	* MonoDevelop.Deployment.Gui/DeployOperations.cs:
	* MonoDevelop.Deployment.Gui/EditPackageDialog.cs:
	* MonoDevelop.Deployment.Gui/EntrySelectionTree.cs:
	* gtk-gui/MonoDevelop.Deployment.Gui.DeployDialog.cs:
	* MonoDevelop.Deployment.Gui/DialogFileReplacePolicy.cs:
	* MonoDevelop.Deployment.NodeBuilders/PackageNodeBuilder.cs:
	* MonoDevelop.Deployment.NodeBuilders/PackagingProjectNodeBuilder.cs:
	  Merged MD.Projects into MD.Core, and MD.Projects.Gui,
	  MD.Core.Gui and MD.Components into MD.Ide.

2010-03-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Deployment/DeployProperties.cs: Track
	  ProjectFile Link API.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Deployment.Gui/PackagingFeature.cs: Track api
	  changes.

2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>
